Fixed modal visibility when clicked

--- a/FrontEnd/assets/main.css
+++ b/FrontEnd/assets/main.css
@@ -89,7 +89,7 @@ form label {
 }
 
 .visible {
-  display: flex;
+  display: flex !important;
 }
 
 /** Reusable CSS classes **/
