--- a/FrontEnd/assets/scss/base/_base.scss
+++ b/FrontEnd/assets/scss/base/_base.scss
@@ -33,7 +33,7 @@ form{
 }
 
 .visible{
-	display: flex;
+	display: flex !important;
 }
 
 /** Reusable CSS classes **/
